refactor(auth): JWT claim key 상수화 및 미사용 메서드 제거